# LessonLedger

./: .gitignore  README.md
backend/: .gitignore  README.md  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: achievements.ts  auth.ts  nft.ts  roadmaps.ts  streaks.ts  tasks.ts  wallet.ts
backend/src/services/: nft.service.ts  wallet.service.ts
contract/: .gitignore  Cargo.toml  package.json
contract/src/: lib.rs
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/achievements/: page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/roadmaps/: page.tsx
frontend/app/roadmaps/[id]/: page.tsx
frontend/components/: AchievementsGrid.tsx  CreateTaskForm.tsx  Navbar.tsx  StreakCard.tsx  TaskList.tsx
frontend/lib/: api.ts  auth.ts
