[package]
name = "academic-accountability-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "20.0"
soroban-sdk-macros = "20.0"

[dev-dependencies]
soroban-sdk = { version = "20.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "academic_accountability_contracts"
path = "src/lib.rs"
